--- a/citations.bib
+++ b/citations.bib
@@ -12,6 +12,15 @@
   year={2014}
 }
 
+@inproceedings{chalmers2013perceptually,
+  title={Perceptually based radiance map for realistic composition},
+  author={Chalmers, Andrew and Choi, Jong Jin and Rhee, Taehyun},
+  booktitle={2013 28th International Conference on Image and Vision Computing New Zealand (IVCNZ 2013)},
+  pages={172--177},
+  year={2013},
+  organization={IEEE}
+}
+
 @inproceedings{ma2015synthesising,
   title={Synthesising radiance maps from legacy outdoor photographs for real-time IBL on HMDs},
   author={Ma, Wan-Duo Kurt and Iorns, Thomas and Chalmers, Andrew and Rhee, Taehyun},
@@ -49,11 +58,27 @@
   organization={IEEE}
 }
 
+@incollection{rhee2018mixed,
+  title={Mixed reality 360 live: live blending of virtual objects into 360° streamed video},
+  author={Rhee, Taehyun and Chalmers, Andrew and Loh, Ian and Allen, Ben and Petikam, Lohit and Thompson, Stephen and Revill, Tom},
+  booktitle={ACM SIGGRAPH 2018 Real-Time Live!},
+  pages={1--1},
+  year={2018}
+}
+
 @incollection{rhee2018mr360,
   title={Mr360 interactive: playing with digital creatures in 360 videos},
   author={Rhee, Taehyun and Chalmers, Andrew and Hicks, Matthew and Kumagai, Kazuki and Allen, Ben and Loh, Ian and Petikam, Lohit and Anjyo, Ken},
   booktitle={SIGGRAPH Asia 2018 Virtual \& Augmented Reality},
   pages={1--2},
+  year={2018}
+}
+
+@incollection{dean2018magic,
+  title={A magic wand for motion capture editing and edit propagation},
+  author={Dean, Christopher J and Lewis, JP and Chalmers, Andrew},
+  booktitle={SIGGRAPH Asia 2018 Technical Briefs},
+  pages={1--4},
   year={2018}
 }
 
@@ -64,6 +89,14 @@
   pages={1191--1192},
   year={2019},
   organization={IEEE}
+}
+
+@misc{rhee2021rendering,
+  title={Rendering process and system},
+  author={Rhee, Tae Hyun and Chalmers, Andrew and Allen, Benjamin Peter and Iorns, Thomas Manu and Petikam, Lohit Dev},
+  year={2021},
+  month=jul # "~6",
+  note={US Patent 11,055,830}
 }
 
 @inproceedings{thompson2019real,
@@ -106,6 +139,15 @@
   publisher={IEEE}
 }
 
+@inproceedings{chalmers2020shadow,
+  title={Shadow-based Light Detection for HDR Environment Maps},
+  author={Chalmers, Andrew and Rhee, Taehyun},
+  booktitle={2020 35th International Conference on Image and Vision Computing New Zealand (IVCNZ)},
+  pages={1--5},
+  year={2020},
+  organization={IEEE}
+}
+
 @article{chalmers2022illumination,
   title={Illumination Browser: An intuitive representation for radiance map databases},
   author={Chalmers, Andrew and Zickler, Todd and Rhee, Taehyun},
@@ -128,6 +170,13 @@
   author={Suppan, Christian and Chalmers, Andrew and Zhao, Junhong and Doronin, Alex and Rhee, Taehyun},
   booktitle={PG (Short Papers, Posters, and Work-in-Progress Papers)},
   pages={37--42},
+  year={2021}
+}
+
+@inproceedings{petikam2021art,
+  title={Art-directing Appearance using an Environment Map Latent Space},
+  author={Petikam, Lohit and Chalmers, Andrew and Anjyo, Ken and Rhee, Taehyun},
+  booktitle={Pacific Graphics Short Papers, Posters, and Work-in-Progress Papers},
   year={2021}
 }
 
@@ -174,4 +223,71 @@
   booktitle={Proceedings of the SIGGRAPH Asia 2022 Real-Time Live!},
   pages={1--1},
   year={2022}
+}
+
+@incollection{rhee2023real,
+  title={Real-time Stage Modelling and Visual Effects for Live Performances},
+  author={Rhee, Taehyun and Chalmers, Andrew and Zaman, Faisal and Stangnes, Anna and Roberts, Vic},
+  booktitle={ACM SIGGRAPH 2023 Real-Time Live!},
+  pages={1--2},
+  year={2023}
+}
+
+@incollection{chalmers2023real,
+  title={Real-time Auditorium Modeling and Visual Effects for Live Performances},
+  author={Chalmers, Andrew and Zaman, Faisal and Stangnes, Anna and Finnie, Simon and Nguyen, Hong Son and Han, JungHyun and Rhee, Taehyun},
+  booktitle={ACM SIGGRAPH Asia 2023 Real-Time Live!},
+  pages={1--1},
+  year={2023}
+}
+
+@incollection{chalmers2023motion,
+  title={A Motion-Simulation Platform to Generate Synthetic Motion Data for Computer Vision Tasks},
+  author={Chalmers, Andrew and Zhao, Junhong and Khuan Hoh, Weng and Drown, James and Finnie, Simon and Yao, Richard and Lin, James and Wilmott, James and Dey, Arindam and Billinghurst, Mark and others},
+  booktitle={SIGGRAPH Asia 2023 Technical Communications},
+  pages={1--4},
+  year={2023}
+}
+
+@inproceedings{zaman2023mrmac,
+  title={MRMAC: Mixed Reality Multi-user Asymmetric Collaboration},
+  author={Zaman, Faisal and Anslow, Craig and Chalmers, Andrew and Rhee, Taehyun},
+  booktitle={2023 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)},
+  pages={591--600},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{zhao2023deep,
+  title={Deep Learning-based Simulator Sickness Estimation from 3D Motion},
+  author={Zhao, Junhong and Tran, Kien TP and Chalmers, Andrew and Hoh, Weng Khuan and Yao, Richard and Dey, Arindam and Wilmott, James and Lin, James and Billinghurst, Mark and Lindeman, Robert W and others},
+  booktitle={2023 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)},
+  pages={39--48},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{o2023simulating,
+  title={Simulating the Geometric Growth of the Marine Sponge Crella Incrustans},
+  author={O’Hagan, Joshua and Chalmers, Andrew and Rhee, Taehyun},
+  booktitle={2023 IEEE Visualization and Visual Analytics (VIS)},
+  pages={116--120},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{weir2023lighting,
+  title={De-lighting Human Images Using Region-Specific Data Augmentation},
+  author={Weir, Joshua and Zhao, Junhong and Chalmers, Andrew and Rhee, Taehyun},
+  booktitle={2023 38th International Conference on Image and Vision Computing New Zealand (IVCNZ)},
+  pages={1--6},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{thompson2019underwater,
+  title={Underwater Toolkit: Mixed Reality Object Blending for 360° Videos},
+  author={Thompson, Stephen and Chalmers, Andrew and Medeiros, Daniel and Rhee, Taehyun},
+  booktitle={IEEE International Symposium on Mixed and Augmented Reality (Demo)},
+  year={2019}
 }
