accv publication added

--- a/citations_additional.bib
+++ b/citations_additional.bib
@@ -18,3 +18,10 @@
   booktitle={PhD Thesis},
   year={2018}
 }
+
+@inproceedings{weir2024full,
+  title={Full-body Human De-lighting with Semi-Supervised Learning},
+  author={Weir, Joshua and Zhao, Junhong and Chalmers, Andrew and Rhee, Taehyun},
+  booktitle={Proceedings of the Asian Conference on Computer Vision (ACCV)},
+  year={2024}
+}
