added accv and slides support

--- a/citations.bib
+++ b/citations.bib
@@ -59,7 +59,7 @@
 }
 
 @incollection{rhee2018mixed,
-  title={Mixed reality 360 live: live blending of virtual objects into 360° streamed video},
+  title={Mixed reality 360 live: live blending of virtual objects into 360 streamed video},
   author={Rhee, Taehyun and Chalmers, Andrew and Loh, Ian and Allen, Ben and Petikam, Lohit and Thompson, Stephen and Revill, Tom},
   booktitle={ACM SIGGRAPH 2018 Real-Time Live!},
   pages={1--1},
@@ -129,7 +129,7 @@
 }
 
 @article{chalmers2020reconstructing,
-  title={Reconstructing reflection maps using a stacked-cnn for mixed reality rendering},
+  title={Reconstructing reflection maps using a stacked-CNN for mixed reality rendering},
   author={Chalmers, Andrew and Zhao, Junhong and Medeiros, Daniel and Rhee, Taehyun},
   journal={IEEE Transactions on Visualization and Computer Graphics},
   volume={27},
@@ -183,7 +183,7 @@
 @article{zhao2021adaptive,
   title={Adaptive light estimation using dynamic filtering for diverse lighting conditions},
   author={Zhao, Junhong and Chalmers, Andrew and Rhee, Taehyun},
-  journal={IEEE Transactions on Visualization and Computer Graphics},
+  journal={IEEE transactions on visualization and computer graphics},
   volume={27},
   number={11},
   pages={4097--4106},
@@ -203,9 +203,12 @@
 }
 
 @article{chen2022casual,
-  title={Casual 6-DoF: free-viewpoint panorama using a handheld 360 camera},
+  title={Casual 6-dof: free-viewpoint panorama using a handheld 360 camera},
   author={Chen, Rongsen and Zhang, Fang-Lue and Finnie, Simon and Chalmers, Andrew and Rhee, Taehyun},
   journal={IEEE Transactions on Visualization and Computer Graphics},
+  volume={29},
+  number={9},
+  pages={3976--3988},
   year={2022},
   publisher={IEEE}
 }
@@ -226,7 +229,7 @@
 }
 
 @incollection{rhee2023real,
-  title={Real-time Stage Modelling and Visual Effects for Live Performances},
+  title={Real-time stage modelling and visual effects for live performances},
   author={Rhee, Taehyun and Chalmers, Andrew and Zaman, Faisal and Stangnes, Anna and Roberts, Vic},
   booktitle={ACM SIGGRAPH 2023 Real-Time Live!},
   pages={1--2},
@@ -250,7 +253,7 @@
 }
 
 @inproceedings{zaman2023mrmac,
-  title={MRMAC: Mixed Reality Multi-user Asymmetric Collaboration},
+  title={Mrmac: Mixed reality multi-user asymmetric collaboration},
   author={Zaman, Faisal and Anslow, Craig and Chalmers, Andrew and Rhee, Taehyun},
   booktitle={2023 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)},
   pages={591--600},
@@ -259,7 +262,7 @@
 }
 
 @inproceedings{zhao2023deep,
-  title={Deep Learning-based Simulator Sickness Estimation from 3D Motion},
+  title={Deep learning-based simulator sickness estimation from 3D motion},
   author={Zhao, Junhong and Tran, Kien TP and Chalmers, Andrew and Hoh, Weng Khuan and Yao, Richard and Dey, Arindam and Wilmott, James and Lin, James and Billinghurst, Mark and Lindeman, Robert W and others},
   booktitle={2023 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)},
   pages={39--48},
@@ -277,7 +280,7 @@
 }
 
 @inproceedings{weir2023lighting,
-  title={De-lighting Human Images Using Region-Specific Data Augmentation},
+  title={De-lighting human images using region-specific data augmentation},
   author={Weir, Joshua and Zhao, Junhong and Chalmers, Andrew and Rhee, Taehyun},
   booktitle={2023 38th International Conference on Image and Vision Computing New Zealand (IVCNZ)},
   pages={1--6},
@@ -290,4 +293,41 @@
   author={Thompson, Stephen and Chalmers, Andrew and Medeiros, Daniel and Rhee, Taehyun},
   booktitle={IEEE International Symposium on Mixed and Augmented Reality (Demo)},
   year={2019}
+}
+
+@inproceedings{chalmers2024avatar360,
+  title={Avatar360: Emulating 6-DoF Perception in 360° Panoramas through Avatar-Assisted Navigation},
+  author={Chalmers, Andrew and Zaman, Faisal and Rhee, Taehyun},
+  booktitle={2024 IEEE Conference Virtual Reality and 3D User Interfaces (VR)},
+  pages={630--638},
+  year={2024},
+  organization={IEEE}
+}
+
+@inproceedings{chen2024neural,
+  title={Neural radiance fields for dynamic view synthesis using local temporal priors},
+  author={Chen, Rongsen and Zhao, Junhong and Zhang, Fang-Lue and Chalmers, Andrew and Rhee, Taehyun},
+  booktitle={International Conference on Computational Visual Media},
+  pages={74--90},
+  year={2024},
+  organization={Springer}
+}
+
+@article{ablett2023,
+  title={2023 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)| 979-8-3503-2838-7/23/$31.00{\copyright} 2023 IEEE| DOI: 10.1109/ISMAR59233. 2023.00142},
+  author={Ablett, Daniel and Aggarwal, Deepti and Akiyoshi, Takuto and Alabood, Lorans and Alexiou, Evangelos and Allgaier, Mareen and Amougou, Maximilian and Anders, Oliver and Anslow, Craig and Argelaguet, Ferran and others}
+}
+
+@article{rhee2021pacific,
+  title={Pacific Graphics 2021},
+  author={Rhee, Taehyun and Hu, Shi-Min and Rushmeier, Holly and Zhang, Fang-Lue and Eisemann, Elmar and Singh, Karan and Lee, Sung-Hee and Zollmann, Stefanie and Okabe, Makoto and W{\"u}nsche, Burkhard and others},
+  year={2021}
+}
+
+@inproceedings{weir2024full,
+  title={Full-body Human De-lighting with Semi-Supervised Learning},
+  author={Weir, Joshua and Zhao, Junhong and Chalmers, Andrew and Rhee, Taehyun},
+  booktitle={Proceedings of the Asian Conference on Computer Vision},
+  pages={648--664},
+  year={2024}
 }
