added 2025 ieeevr poster

--- a/citations_additional.bib
+++ b/citations_additional.bib
@@ -4,3 +4,11 @@
   booktitle={PhD Thesis},
   year={2018}
 }
+
+@inproceedings{nguyen2025full,
+  title={Full-Body Interaction in Mixed Reality using 3D Pose and Shape Estimation},
+  author={Nguyen, Hong Son and Chalmers, Andrew and Cheong, DaEun and Kim, Myoung Gon and Rhee, Taehyun and Han, JungHyun},
+  booktitle={2025 IEEE Conference on Virtual Reality and 3D User Interfaces (VR)},
+  year={2025},
+  organization={IEEE}
+}
