added paper casa 2025

--- a/citations_additional.bib
+++ b/citations_additional.bib
@@ -12,3 +12,10 @@
   year={2025},
   organization={IEEE}
 }
+
+@inproceedings{nguyen2025interaction,
+  title={Interaction with Virtual Objects using Human Pose and Shape Estimation},
+  author={Nguyen, Hong Son and Cheong, DaEun and Chalmers, Andrew and Kim, Myoung Gon and Rhee, Taehyun and Han, JungHyun},
+  booktitle={38th International Computer Animation Social Agents (CASA) 2025},
+  year={2025}
+}
