added ismar 2025 poster

--- a/citations_additional.bib
+++ b/citations_additional.bib
@@ -19,3 +19,10 @@
   booktitle={38th International Computer Animation Social Agents (CASA) 2025},
   year={2025}
 }
+
+@inproceedings{chalmers2025the,
+  title={The Impact of Occlusion and Collision on Real–Virtual Interaction in Mixed Reality 360° Images},
+  author={Chalmers, Andrew and Jeong, SeungWon and Yuan, Xuteng and Zhang, Fang-Lue and Rhee, Taehyun},
+  booktitle={2025 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)},
+  year={2025}
+}
