Added se360 aaai

--- a/citations_additional.bib
+++ b/citations_additional.bib
@@ -26,3 +26,10 @@
   booktitle={2025 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)},
   year={2025}
 }
+
+@inproceedings{Zhong2026SE360,
+  title={SE360: Semantic Edit in 360° Panoramas via Hierarchical Data Construction},
+  author={Zhong, Haoyi and Zhang, Fang-Lue and Chalmers, Andrew and Rhee, Taehyun},
+  booktitle={2026 Association for the Advancement of Artificial Intelligence (AAAI)},
+  year={2026}
+}
