--- a/citations_additional.bib
+++ b/citations_additional.bib
@@ -27,7 +27,7 @@
   year={2025}
 }
 
-@inproceedings{Zhong2026SE360,
+@inproceedings{zhong2026se360,
   title={SE360: Semantic Edit in 360° Panoramas via Hierarchical Data Construction},
   author={Zhong, Haoyi and Zhang, Fang-Lue and Chalmers, Andrew and Rhee, Taehyun},
   booktitle={2026 Association for the Advancement of Artificial Intelligence (AAAI)},
